Fix rules for page height (to remove vertical scrollbar)

--- a/src/ensembl/src/styles/main.scss
+++ b/src/ensembl/src/styles/main.scss
@@ -3,6 +3,12 @@
 @import 'fonts';
 @import 'animation';
 
+html,
+body,
+.ens-app {
+  height: 100%;
+}
+
 a {
   color: $ens-dark-blue;
   text-decoration: none;
